# smart-fuel-financing

./: .env.example  .gitignore  API_STRUCTURE.md  ARCHITECTURE.md  BANK_PORTAL_FLOW.md  DEPLOYMENT.md  ENV_SETUP.md  LOCAL_SETUP.md  README.md  ROLE_MANAGEMENT.md  STATION_MANAGEMENT.md  STATION_WORKFLOW.md  alembic.ini  create_super_admin.bat  debug_db.py  pyproject.toml  render.yaml  requirements.txt  run_local.bat  run_local.sh  setup_alembic.py  verification_output.txt  verify_bank_crud.py  verify_ml.py  verify_otp_flow.py  verify_pre_auth.py  verify_refactor.py  verify_removal.py  verify_station_pricing.py
alembic/: env.py
app/: main.py
app/core/: config.py  security.py
app/db/: base.py  session.py
app/models/: __init__.py  bank.py  driver.py  entities.py  kyc.py  loan.py  notification.py  payment.py  qr.py  station.py  transaction.py  user.py
app/routers/: admin.py  agents.py  auth.py  bank_integration.py  bank_portal.py  banks.py  credit.py  credit_scoring.py  customer.py  customer_requests.py  drivers.py  kyc.py  loan.py  loans_transactions.py  merchants.py  notification.py  payment.py  reports.py  station.py  stations.py  transactions.py  users.py
app/schemas/: auth.py  bank.py  credit.py  credit_request.py  driver.py  kyc.py  loan.py  notification.py  payment.py  station.py  transaction_qr.py  transactions.py  user.py
app/services/: auth_service.py  credit_engine_service.py  credit_request_service.py  credit_scoring_ml_model.pkl  driver_service.py  kyc_service.py  loan_service.py  (+6 more)
scripts/: create_super_admin.py  reset_db.py  seed_data.py
